--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -159,7 +159,8 @@ header nav a:hover {
 }
 
 .right-container .artifacts .search-container .search-button,
-.right-container .artifacts button {
+.right-container .artifacts button,
+.popup button {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     padding: 10px 20px;
     border: none;
@@ -170,12 +171,18 @@ header nav a:hover {
     outline: none;
     transition: background-color 0.3s;
     flex-shrink: 0;
-    margin-bottom: 10px;
+    max-width: 200px;
+    box-sizing: border-box;
+}
+
+.right-container .artifacts .search-container .search-button {
+    margin-bottom: 5px;
     margin-right: 10px;
 }
 
 .right-container .artifacts .search-container button:hover,
-.right-container .artifacts button:hover {
+.right-container .artifacts button:hover,
+.popup button:hover {
     background-color: #ffbb00;
     color: black;
 }
@@ -190,18 +197,16 @@ header nav a:hover {
     box-sizing: border-box;
 }
 
-.right-container .artifacts .form-group {
+.form-group {
     margin-bottom: 15px;
 }
 
-.right-container .artifacts label {
+label {
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-.right-container .artifacts input[type="text"],
-.right-container .artifacts select,
-.right-container .artifacts textarea {
+input[type="text"], select, textarea {
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin-top: 7px;
     width: 100%;
@@ -212,12 +217,12 @@ header nav a:hover {
     font-size: 15px;
 }
 
-.right-container .artifacts textarea {
+textarea {
     resize: vertical;
     height: 100px;
 }
 
-.right-container .artifacts input[type="file"] {
+input[type="file"] {
     margin-top: 7px;
     padding: 8px;
     border: 1px solid #ccc;
@@ -239,4 +244,40 @@ header nav a:hover {
     margin-top: 20px;
     margin-bottom: 10px;
     justify-content: center;
+    flex-wrap: wrap;
+}
+
+.popup {
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-section,
+.popup-catalog,
+.popup-subcat {
+    background: white;
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 10px;
+    border-radius: 10px;
+    position: relative;
+}
+
+.popup-section { display: none; }
+.popup-catalog { display: none; }
+.popup-subcat { display: none; }
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    height: 15px;
+    cursor: pointer;
 }
