--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -7,7 +7,6 @@
 body {
     font-family: 'Inter', sans-serif;
     background-color: #272626;
-    /* Dark background */
     color: #FFFFFF;
     display: flex;
     justify-content: center;
@@ -33,20 +32,15 @@ p {
 /* Welcome Page Styles */
 .welcome-body {
     background: url('../../assets/img/bulul.png') no-repeat center center fixed, #272626;
-    /* Image overlaid on a dark background */
     background-size: cover;
-    /* Ensure the image covers the entire container */
     box-shadow: none;
-    /* Remove the box-shadow */
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
     background-color: #272626(0, 0, 0, 0.8);
-    /* Dark overlay for better visibility */
     opacity: 0;
     animation: backgroundAnimation 5s forwards;
-    /* Adjust duration as needed */
 }
 
 @keyframes backgroundAnimation {
@@ -198,7 +192,6 @@ form {
     top: 50%;
     transform: translateY(-10%);
     color: #0E1644;
-    /* Adjust icon color as needed */
 }
 
 .input-container .icon-left {
@@ -215,14 +208,13 @@ input[type="password"] {
     outline: none;
     font-size: 16px;
     background-color: #ffffffa8;
-    /* Changed to white */
     color: #0E1644;
-    /* Changed text color to match the border color */
 }
 
 .fa {
     right: 220px;
 }
+
 button {
     background-color: #0E1644;
     color: #FFFFFF;
@@ -235,7 +227,6 @@ button {
     transition: background-color 0.3s ease-in-out;
     margin-top: 55px;
     font-weight: bold;
-    /* Adjusted margin */
 }
 
 button:hover {
@@ -1115,15 +1106,61 @@ a-plane {
         background-color: #FAC301;
     }
 
+    /* Overlay style */
+    .overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+        justify-content: center;
+        align-items: center;
+    }
+
+    /* Box style */
+    .info-box {
+        background-color: #fff;
+        font-family: 'Inter', sans-serif;
+        background-image: url('/assets/img/info_box.png');
+        background-size: cover;
+        background-position: center;
+        width: 80%;
+        max-width: 500px;
+        padding: 30px;
+        border-radius: 20px;
+        text-align: center;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+        border: 3px solid #363636;
+    }
+
+    /* Timer styling */
+    .timer {
+        margin-top: 10px;
+        font-size: 0.7em;
+        color: #8a8989;
+        font-family: 'Inter', sans-serif;
+    }
+
+    .info-box-text {
+        font-family: 'Inter', sans-serif;
+        font-size: 0.9em;
+    }
+
+    .welcome-2 {
+        font-weight: bold;
+        font-size: 1.5em;
+        font-family: 'Inter', sans-serif;
+        font-style: italic;
+    }
 
     /* Welcome Page Styles */
     .welcome-body {
         background: url('../../assets/img/bulul.png') no-repeat center center fixed, #1C1C1C;
-        /* Image overlaid on a dark background */
         background-size: 300px;
-        /* Adjust as needed */
         box-shadow: none;
-        /* Remove the box-shadow */
         display: flex;
         justify-content: center;
         align-items: center;
@@ -1145,7 +1182,6 @@ a-plane {
         font-weight: lighter;
     }
 
-
     /**/
     .banner {
         display: flex;
@@ -1153,19 +1189,14 @@ a-plane {
         align-items: center;
         text-align: center;
         margin-bottom: 30px;
-        /* Adjust for spacing between banner and button */
     }
-
-    /**/
 
     /* Login Page Styles */
     .login-body {
         background: url('../../assets/img/bulul-low-op.png') no-repeat center center fixed;
         background-color: #1C1C1C;
         background-size: 300px;
-        /* Adjust as needed */
         box-shadow: none;
-        /* Remove the box-shadow */
     }
 
     .login-container {
@@ -1207,9 +1238,7 @@ a-plane {
         border: 1px solid #0E1644;
         border-radius: 5px;
         background-color: #ffffff;
-        /* Changed to white */
         color: #0E1644;
-        /* Changed text color to match the border color */
         outline: none;
         font-size: 16px;
     }
@@ -1238,9 +1267,7 @@ a-plane {
 
     .input-container input {
         padding-left: 30px;
-        /* Space for the icon */
         padding-right: 12px;
-        /* Adjust as necessary */
         padding-top: 10px;
         padding-bottom: 10px;
         width: 100%;
@@ -1248,9 +1275,7 @@ a-plane {
         border-radius: 5px;
         text-indent: 10px;
         background-color: #ffffff;
-        /* Changed to white */
         color: #0E1644;
-        /* Changed text color to match the border color */
         outline: none;
         font-size: 16px;
     }
@@ -1286,9 +1311,7 @@ a-plane {
         outline: none;
         font-size: 16px;
         background-color: #ffffff9f;
-        /* Changed to white */
         color: #0E1644;
-        /* Changed text color to match the border color */
     }
 
     button {
@@ -1302,7 +1325,6 @@ a-plane {
         text-decoration: none;
         transition: background-color 0.3s ease-in-out;
         margin-top: 55px;
-        /* Adjusted margin */
     }
 
     button:hover {
@@ -1348,12 +1370,10 @@ a-plane {
         transition: background-color 0.3s ease-in-out;
         position: relative;
         z-index: 10;
-        /* Ensures the button is clickable */
     }
 
     .btn-white:hover {
         background-color: #0E1644;
-        /* Darkened primary color */
         color: #FFFFFF;
         border: 1.25px solid #FFFFFF;
     }
@@ -1361,24 +1381,19 @@ a-plane {
     .access-body {
         font-family: 'Inter', sans-serif;
         background: url('../../assets/img/bulul-low-op.png') no-repeat center center fixed, #1C1C1C;
-        /* Image overlaid on a dark background */
         background-size: 300px;
-        /* Adjust as needed */
         display: flex;
         justify-content: center;
         align-items: center;
         height: 100vh;
         position: relative;
-        /* Ensure relative positioning for absolute logo */
         color: #FFFFFF;
     }
 
     .access-buttons {
         display: flex;
         flex-direction: column;
-        /* Ensure buttons stack vertically */
         align-items: center;
-        /* Center align items horizontally */
     }
 
     .custom-radio {
@@ -1391,7 +1406,6 @@ a-plane {
 
     .custom-radio input[type="radio"] {
         display: none;
-        /* Hide the actual radio button */
     }
 
     .custom-radio input[type="radio"]+.custom-radio-span {
