--- a/res/css/dances.css
+++ b/res/css/dances.css
@@ -1,10 +1,7 @@
-@charset "utf-8";@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700);html {
-    position: relative
-}
 
 body {
     background: #fafafa;
-    font-family: Roboto,Arial;
+    font-family: 'Inter', sans-serif;
     color: #111;
     font-size: 14px;
     line-height: 1.2em;
