--- a/res/css/dances.css
+++ b/res/css/dances.css
@@ -343,7 +343,7 @@ strong {
     top: 10px;
     right: 10px;
     font-size: 14px;
-    font-family: arial;
+    font-family: 'Inter', sans-serif;
     font-weight: 600;
     display: inline-block;
     padding: 3px 4px;
@@ -1128,7 +1128,7 @@ strong {
     }
 }
 
-@media (min-width: 300px) and (max-width: 479px) {
+@media (min-width: 240px) and (max-width: 479px) {
     .block_area .block_area-header {
         padding-right:40px;
         position: relative
