--- a/res/css/adminStyle.css
+++ b/res/css/adminStyle.css
@@ -103,7 +103,7 @@ header nav a:hover {
 
 .chart-container {
     min-height: 300px;
-    position: relative; 
+    position: relative;
 }
 
 .btn {
@@ -111,29 +111,29 @@ header nav a:hover {
     font-size: 1rem;
     font-weight: 500;
     opacity: 1;
-    border-radius: 3px; 
+    border-radius: 3px;
 }
-    
+
 .btn:hover, .btn:focus {
-      opacity: 0.8; 
+      opacity: 0.8;
 }
-    
+
 .btn .btn-label {
-      display: inline-block; 
+      display: inline-block;
 }
-      
+
 .btn .btn-label i {
         font-size: 16px;
         vertical-align: middle;
         margin-right: 2px;
         margin-left: -2px;
         line-height: 0;
-        margin-top: -2.5px; 
+        margin-top: -2.5px;
 }
-      
+
 .btn .btn-label.just-icon i {
         margin-left: 0 !important;
-        margin-right: 0px !important; 
+        margin-right: 0px !important;
 }
 
 .btn-label i {
@@ -142,60 +142,60 @@ header nav a:hover {
     margin-right: 2px;
     margin-left: -7px;
     line-height: 0;
-    margin-top: -2.5px; 
+    margin-top: -2.5px;
 }
-  
+
 .btn-lg .btn-label.just-icon i {
     margin-left: 0 !important;
-    margin-right: 0px !important; 
+    margin-right: 0px !important;
 }
 
 .btn-label-info {
     background: rgba(72, 171, 247, 0.1);
     color: #4376ad !important;
-    border-color: transparent; 
+    border-color: transparent;
 }
-    
+
 .btn-label-info:hover, .btn-label-info:focus, .btn-label-info:disabled {
       background: #4376ad;
       color: #fff !important;
-      opacity: 1; 
+      opacity: 1;
 }
 
 .btn-label-success {
     background: rgba(49, 206, 54, 0.1);
     color: #ffbb00 !important;
-    border-color: transparent; 
+    border-color: transparent;
 }
-    
+
 .btn-label-success:hover, .btn-label-success:focus, .btn-label-success:disabled {
       background: #ffbb00;
       color: #fff !important;
-      opacity: 1; 
+      opacity: 1;
 }
 
 .btn-round {
-    border-radius: 100px !important; 
+    border-radius: 100px !important;
 }
 
 .btn-sm {
     font-size: 11px;
-    padding: 7px 13px; 
+    padding: 7px 13px;
 }
 
 .card {
-    border: 1px solid #eaeaea; 
+    border: 1px solid #eaeaea;
     transform: scale(1); /* Scale up the element */
 }
 
 
 .card-header {
-    border-bottom: 0px !important; 
+    border-bottom: 0px !important;
 }
 
 .card .card-head-row, .card-light .card-head-row {
     display: flex;
-    align-items: center; 
+    align-items: center;
 }
 
 .card-title {
@@ -203,35 +203,35 @@ header nav a:hover {
     color: #2A2F5B;
     font-size: 20px;
     font-weight: 600;
-    line-height: 1.6; 
+    line-height: 1.6;
 }
 
 .card-title a, .card-title a:hover, .card-title a:focus {
     color: #2A2F5B;
-    text-decoration: none; 
+    text-decoration: none;
 }
 
 .card-title {
-    margin-bottom: 0px !important; 
+    margin-bottom: 0px !important;
 }
 
 
 .card .card-tools .btn, .card-tools .btn {
-    margin-right: 10px; 
+    margin-right: 10px;
 }
 
 .card .card-head-row .card-tools, .card-light .card-head-row .card-tools {
     margin-left: auto;
     float: right;
-    padding-left: 15px; 
+    padding-left: 15px;
 }
 
 .card .card-head-row .card-tools .btn:last-child, .card-light .card-head-row .card-tools .btn:last-child {
-    margin-right: 0px; 
+    margin-right: 0px;
 }
 
 .card .card-footer .legend, .card-light .card-footer .legend {
-    display: inline-block; 
+    display: inline-block;
 }
 
 .html-legend {
@@ -243,9 +243,9 @@ header nav a:hover {
     cursor: pointer;
     padding-left: 0;
     text-align: center;
-    margin-top: 1rem; 
+    margin-top: 1rem;
 }
-  
+
 .html-legend li {
     justify-content: center;
     align-items: center;
@@ -255,13 +255,13 @@ header nav a:hover {
     margin-right: 5px;
     margin-bottom: 6px;
     color: #8d9498;
-    font-size: 12px; 
+    font-size: 12px;
 }
-  
+
 .html-legend li.hidden {
-    text-decoration: line-through; 
+    text-decoration: line-through;
 }
-  
+
 .html-legend li span {
     border-radius: 15px;
     display: inline-block;
@@ -484,4 +484,40 @@ input[type="file"] {
     width: 100%;
     max-width: 800px; /* Adjust as needed */
     margin: 0 auto;
+}
+
+/* STYLE FOR THE EDIT ARTIFACT*/
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
