--- a/res/css/styles.css
+++ b/res/css/styles.css
@@ -4,6 +4,13 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: 'OldStandard';
+    src: url('path/to/your/OldStandard.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     font-family: 'Inter', sans-serif;
     background-color: #272626;
@@ -67,7 +74,6 @@ p {
     }
 }
 
-/* Welcome Page Styles */
 /* Welcome Page Styles */
 .welcome-body {
     background: url('../../assets/img/bulul.png') no-repeat center center fixed, rgba(39, 38, 38, 0.8); /* You can keep the fallback color */
@@ -640,7 +646,7 @@ main {
 }
 
 /* Video stream for QR scanning */
-#video {
+/* #video {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -649,7 +655,7 @@ main {
     height: auto;
     z-index: 1;
     visibility: visible;
-}
+} */
 
 /* Canvas for processing the video stream */
 #video {
@@ -680,29 +686,26 @@ a-scene {
     /* Prevent interactions with the AR scene */
 }
 
-
-
 /* Optional: Customize the AR plane if used */
 a-plane {
     opacity: 0.8;
     color: #333;
 }
 
-
-
 /* Loading or result message */
 #result {
     position: absolute;
     top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    color: #fff;
-    background-color: rgba(0, 0, 0, 0.6);
+    left: 10px;
+    color: white;
+    font-size: 15px;
+    font-weight: bold;
+    background-color: #b78f3f;
+    font-family: 'OldStandard', serif;
     padding: 10px;
     border-radius: 5px;
-    z-index: 3;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
 }
-
 
 @keyframes fadeIn {
     from {
@@ -1037,12 +1040,22 @@ a-plane {
 
     #video {
         width: 100%;
-        height: auto;
+        max-width: 400px;
+        display: block;
     }
 
     #result {
-        top: 5px;
-        font-size: 0.9em;
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        color: white;
+        font-size: 15px;
+        font-weight: bold;
+        background-color: #b78f3f;
+        font-family: 'OldStandard', serif;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     }
 }
 
@@ -1108,6 +1121,37 @@ a-plane {
         left: 20px;
     }
 
+    .floating-button2 {
+        position: absolute;
+        bottom: 20px;
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #4f7eba;
+        color: white;
+        font-size: 24px;
+        border: none;
+        cursor: pointer;
+        z-index: 1002;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+
+      .floating-button.left2 {
+        display: block;
+        border: 3px solid white;
+        left: 20px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+        background-color: #4f7eba;
+    }
+
+    .floating-button.left2:hover {
+        color: white;
+    }
+
     @keyframes zoomIn {
         0% {
             transform: scale(0.8);
@@ -1118,20 +1162,89 @@ a-plane {
         }
     }
 
+    #watchVideosButton {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 60px;
+        height: 60px;
+        padding: 0;
+        border-radius: 50%;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        background-color: #b78f3f;
+        background-size: cover;
+        background-position: center;
+        border: none;
+        cursor: pointer;
+        z-index: 1003;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        animation: zoomIn 3s;
+        border: 3px solid rgba(255, 255, 255, 1);
+    }
+
+    #watchVideosButton::before {
+        content: "\25B6";
+        color: white;
+        font-size: 30px;
+        display: block;
+    }
+
     #watchVideosButton:hover {
-        background-color: #FAC301;
+        background-color: #fac301;
+    }
+
+    @keyframes zoomIn {
+        0% {
+          transform: scale(0.8);
+        }
+
+        100% {
+          transform: scale(1);
+        }
+    }
+
+    #imgCondition {
+        max-width: 50%;
+        height: 72px;
+        position: absolute;
+        top: 80px;
+        right: 10px;
+        z-index: 1000;
+        background-color: #bb3d41;
+        padding: 10px;
+        border-radius: 5px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
+    }
+
+    #conditionLabel {
+        position: absolute;
+        top: 160px;
+        font-family: 'OldStandard', serif;
+        right: 10px;
+        color: white;
+        font-size: 14px;
+        font-weight: bold;
+        background-color: #bb3d41;
+        padding: 6px;
+        border-radius: 5px;
+        display: none; 
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     }
 
     #result {
         position: absolute;
-        top: 10px;
+        top: 80px;
         left: 10px;
         color: white;
-        font-size: 14px;
+        font-size: 15px;
         font-weight: bold;
-        background-color: #0E1644;
-        padding: 5px;
+        background-color: #b78f3f;
+        font-family: 'OldStandard', serif;
+        padding: 10px;
         border-radius: 5px;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
     }
 
     @keyframes shake {
@@ -1194,38 +1307,55 @@ a-plane {
 
     /* Box style */
     .info-box {
+        font-family: 'OldStandard', serif;
         background-color: #fff;
-        font-family: 'Inter', sans-serif;
-        background-image: url('/assets/img/info_box.png');
+        font-family: 'OldStandard', serif;
         background-size: cover;
         background-position: center;
         width: 80%;
-        max-width: 500px;
-        padding: 30px;
+        padding: 20px;
+        align-self: center;
         border-radius: 20px;
         text-align: center;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         border: 3px solid #363636;
+        background-image: url("/assets/img/info_box.png");
     }
 
-    /* Timer styling */
     .timer {
-        margin-top: 10px;
+        margin-top: 20px;
+        margin-bottom: 20px;
         font-size: 0.7em;
         color: #8a8989;
-        font-family: 'Inter', sans-serif;
-    }
-
-    .info-box-text {
-        font-family: 'Inter', sans-serif;
-        font-size: 0.9em;
+        font-family: 'OldStandard', serif;
     }
 
     .welcome-2 {
+        font-family: 'OldStandard', serif;
         font-weight: bold;
-        font-size: 1.5em;
-        font-family: 'Inter', sans-serif;
-        font-style: italic;
+        margin-bottom: 10px;
+        margin-top: 10px;
+        font-size: 1em;
+        color: #555555;
+    }
+
+    .info-box-text {
+        font-family: 'OldStandard', serif;
+        font-size: 0.8em;
+        margin-bottom: 10px; 
+        color: #555555;
+    }
+
+    #noArtifactImage {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 300px;
+        height: auto;
+        z-index: 10;
+        animation: fadeOut 3s ease-in-out infinite;
     }
 
     /* Welcome Page Styles */
@@ -1615,31 +1745,4 @@ a-plane {
         font-family: Arial, sans-serif;
         z-index: 10;
     }
-
-    .magnifying-glass {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 100px;
-        height: 100px;
-        transform: translate(-50%, -50%);
-        display: none;
-        animation: wave 1s ease-out;
-    }
-
-    /* Keyframes for waving animation */
-    @keyframes wave {
-        0% {
-            transform: translate(-50%, -50%) rotate(0deg);
-        }
-
-        50% {
-            transform: translate(-50%, -50%) rotate(15deg);
-        }
-
-        100% {
-            transform: translate(-50%, -50%) rotate(-15deg);
-        }
-    }
-
 }
